--- a/src/components/local_styles/card.scss
+++ b/src/components/local_styles/card.scss
@@ -4,12 +4,28 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 20vw;
-    border : 0.828px dashed #FFF;
+    width: 25vw;
+    border : 0.828px dashed hsl(0, 0%, 100%);
+    padding: 0 3%;
+    margin: 0 1%;
     h3 {
         font-size: 40px;
         text-align: center;
         letter-spacing: 2.5px;
         height: 40px;
+        display: flex;
+        align-items: center;
+    }
+    p {
+        font-size: 15px;
+        letter-spacing: 0.5px;
+    }
+    ul {
+        margin : 0;
+        li {
+            font-size: 15px;
+            letter-spacing: 0.5px;
+            font-weight: 700;
+        }
     }
 }
