--- a/src/pages/local_styles/homepage.scss
+++ b/src/pages/local_styles/homepage.scss
@@ -23,6 +23,7 @@ section {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
     h2 {
         font-size: 96px;
         @include text-main-fonts;
@@ -30,6 +31,14 @@ section {
     }
     h3 {
         @include text-main-fonts;
+    }
+    p {
+        font-family: "Khand";
+    }
+    ul {
+        li {
+            font-family: "Khand";
+        }
     }
 }
 
