--- a/src/components/local_styles/burger.scss
+++ b/src/components/local_styles/burger.scss
@@ -13,4 +13,59 @@
         background-color: white;
         transition: all 0.3s ease-in-out;
     }
+    &.active {
+        :nth-child(1) {
+            transform: rotate(45deg) translate(5px, 5px);
+            margin-top: 10px;
+        }
+        :nth-child(2) {
+            opacity: 0;
+        }
+        :nth-child(3) {
+            transform: rotate(-45deg) translate(5px, -5px);
+            margin-bottom: 10px;
+        }
+    }
+}
+
+.overlayMenu {
+    &.visible {
+       //Move from left to right
+        left:0%;
+        transition: all 0.5s ease-in-out;
+
+    }
+    transition: all 0.5s ease-in-out;
+    display: flex;
+    position: fixed;    
+    z-index: -1;
+    left: -25%;
+    background-color: #8B0000;
+    height: 100vh;
+    width: 25%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    nav {
+        display: flex;
+        flex-direction: column;
+        ul {
+            list-style-type: none;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            padding: 0;
+            li {
+                margin: 0.5em 0;
+                a {
+                    cursor: pointer;
+                    text-decoration: none;
+                    color: white;
+                    font-family: "King Butcher";
+                    font-size: 90px;
+                    
+                }
+            }
+        }
+    }
 }
