--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,17 @@
 body {
   margin: 0;
+  position: relative;
+  z-index: -5;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+#root {
+  position: relative;
+  z-index: -4;
 }
 
 code {
