--- a/src/pages/local_styles/homepage.scss
+++ b/src/pages/local_styles/homepage.scss
@@ -15,6 +15,10 @@ $fontKhandPath: '../../assets/fonts/Khand-Regular.ttf';
     letter-spacing: 6px;
     font-weight: 100;
 }
+.homepage {
+    position: relative;
+    z-index: -3;
+}
 
 section {
     height: 100vh;
@@ -23,6 +27,8 @@ section {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    position: relative;
+    z-index: -2;
 
     h2 {
         font-size: 96px;
