--- a/src/components/local_styles/card.scss
+++ b/src/components/local_styles/card.scss
@@ -4,10 +4,11 @@
     &:hover .card-img {
         opacity: 1;
     }
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 25vw;
+    width: 20vw;
     border : 0.828px dashed hsl(0, 0%, 100%);
     padding: 0 3%;
     margin: 0 1%;
@@ -32,10 +33,14 @@
         }
     }
 }
+
 .card-img {
     opacity: 0;
     transition: ease .2s;
     position: absolute;
     filter: brightness(0.5);    
     z-index: -1;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
