--- a/src/components/local_styles/burger.scss
+++ b/src/components/local_styles/burger.scss
@@ -41,7 +41,7 @@
     position: fixed;    
     z-index: 1;
     left: -25%;
-    background-color: #8B0000;
+    background-color: #610000;
     height: 100vh;
     width: 25%;
     flex-direction: column;
